create: login user and auth middleware

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 SECRET_KEY=
-DATABASE_URL=postgres://<user>:<password>@<hostname>:<port>/<database-name>
+DATABASE_URL=nicolly://nicolly:10202810@localhost:3099/projetofinalm6
