--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 SECRET_KEY=
 DATABASE_URL=postgres://<user>:<password>@<hostname>:<port>/<database-name>
+
+# variáveis de configuração de envio de email
+EMAIL_HOST= 
+EMAIL_PORT= 
+SMTP_USER=
+SMTP_PASS=
+BASEURL_PROD=
+SENDER_EMAIL=
