--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
@@ -28,6 +29,8 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "8.5.1",
+    "mailgen": "^2.0.27",
+    "nodemailer": "^6.9.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
