feat/recover_password: .env update and email update

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 SECRET_KEY=
 DATABASE_URL=postgres://<user>:<password>@<hostname>:<port>/<database-name>
 
+NODE_ENV=
 # variáveis de configuração de envio de email
 EMAIL_HOST= 
 SMTP_USER=
