--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
@@ -21,8 +22,11 @@
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.36.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
@@ -30,6 +34,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "8.5.1",
     "mailgen": "^2.0.27",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
